# VipusinyVIjayakumar-fairsharer

./: README.md  pyproject.toml
.github/workflows/: ci.yml
fairsharer/: fairsharer.py
tests/: test_fairsharer.py
